force-app/main/default/objects/OperationPaymentRequest__c/OperationPaymentRequest__c.object-meta.xml
<CustomObject>
    <label>Operation Payment Request</label>
    <nameField>
        <displayFormat>OP - {000000}</displayFormat>
        <label>Operation Payment Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operation Payment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>