force-app/main/default/objects/OperationPaymentRequest__c/fields/Accountant__c.field-meta.xml
<CustomField>
    <fullName>Accountant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accountant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payment_Request</relationshipName>
    <type>Lookup</type>
</CustomField>