force-app/main/default/objects/OperationPaymentRequest__c/fields/Actual_Amount_for_CollectionFCY__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_for_CollectionFCY__c</fullName>
    <label>Actual Amount for Collection(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>