force-app/main/default/objects/OperationPaymentRequest__c/fields/Actual_Amount_for_CollectionLocal__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_for_CollectionLocal__c</fullName>
    <label>Actual Amount for Collection(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>