force-app/main/default/objects/OperationPaymentRequest__c/fields/Actual_Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Returned_Date__c</fullName>
    <label>Actual Returned Date</label>
    <type>Date</type>
</CustomField>