force-app/main/default/objects/OperationPaymentRequest__c/fields/ActualAmountforPaymentUSD__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountforPaymentUSD__c</fullName>
    <label>Actual Amount for Payment (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>