force-app/main/default/objects/OperationPaymentRequest__c/fields/ActualAmountforPaymentVND__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountforPaymentVND__c</fullName>
    <label>Actual Amount for Payment (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>