force-app/main/default/objects/OperationPaymentRequest__c/fields/Additional_Amount_Pay_to_StaffFCY__c.field-meta.xml
<CustomField>
    <fullName>Additional_Amount_Pay_to_StaffFCY__c</fullName>
    <label>Additional Amount Pay to Staff(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>