force-app/main/default/objects/OperationPaymentRequest__c/fields/Additional_Amount_Pay_to_StaffLocal__c.field-meta.xml
<CustomField>
    <fullName>Additional_Amount_Pay_to_StaffLocal__c</fullName>
    <label>Additional Amount Pay to Staff(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>