force-app/main/default/objects/OperationPaymentRequest__c/fields/Amount_Advance_PaidFCY__c.field-meta.xml
<CustomField>
    <fullName>Amount_Advance_PaidFCY__c</fullName>
    <label>Amount Advance Paid(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>