force-app/main/default/objects/OperationPaymentRequest__c/fields/Amount_Advance_PaidLocal__c.field-meta.xml
<CustomField>
    <fullName>Amount_Advance_PaidLocal__c</fullName>
    <label>Amount Advance Paid(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>