force-app/main/default/objects/OperationPaymentRequest__c/fields/AmountrequestedUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountrequestedUSD__c</fullName>
    <label>Amount requested (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>