force-app/main/default/objects/OperationPaymentRequest__c/fields/AmountrequestedVND__c.field-meta.xml
<CustomField>
    <fullName>AmountrequestedVND__c</fullName>
    <label>Amount requested (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>