force-app/main/default/objects/OperationPaymentRequest__c/fields/AmountTaxBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxBuyingFCY__c</fullName>
    <label>Amount Tax Buying (FCY)</label>
    <summarizedField>FTMSBillPaymentRequest__c.AmountTaxBuyingFCY__c</summarizedField>
    <summaryForeignKey>FTMSBillPaymentRequest__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>