force-app/main/default/objects/OperationPaymentRequest__c/fields/AmountTaxBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxBuyingLocal__c</fullName>
    <label>Amount Tax Buying (Local)</label>
    <summarizedField>FTMSBillPaymentRequest__c.AmountTaxBuyingLocal__c</summarizedField>
    <summaryForeignKey>FTMSBillPaymentRequest__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>