force-app/main/default/objects/OperationPaymentRequest__c/fields/Auto_Connect_Sources_to_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Auto_Connect_Sources_to_Transaction__c</fullName>
    <label>Auto-Connect Sources to Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>