force-app/main/default/objects/OperationPaymentRequest__c/fields/Bank_Charges__c.field-meta.xml
<CustomField>
    <fullName>Bank_Charges__c</fullName>
    <label>Bank Charges</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>