force-app/main/default/objects/OperationPaymentRequest__c/fields/Beneficiary_information__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_information__c</fullName>
    <label>Beneficiary information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>