force-app/main/default/objects/OperationPaymentRequest__c/fields/ContractCountDown__c.field-meta.xml
<CustomField>
    <fullName>ContractCountDown__c</fullName>
    <formula>ContractID__r.CountdownDays__c</formula>
    <label>Contract Count Down</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>