force-app/main/default/objects/OperationPaymentRequest__c/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <formula>ContractID__r.Contract_End_Date__c</formula>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>