force-app/main/default/objects/OperationPaymentRequest__c/fields/ContractID__c.field-meta.xml
<CustomField>
    <fullName>ContractID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract ID</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Operation Payment Requests</relationshipLabel>
    <relationshipName>Operation_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>