force-app/main/default/objects/OperationPaymentRequest__c/fields/Cost_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Cost_Evidence__c</fullName>
    <label>Cost Evidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Report</fullName>
            </value>
            <value>
                <fullName>All VAT(Outbound VAT to Customer &amp; Vendor VAT)</fullName>
            </value>
            <value>
                <fullName>Vendor VAT</fullName>
            </value>
            <value>
                <fullName>Outbound VAT to Customer</fullName>
            </value>
            <value>
                <fullName>Vendor Debit</fullName>
            </value>
            <value>
                <fullName>Vendor Quote</fullName>
            </value>
            <value>
                <fullName>Vendor Order</fullName>
            </value>
            <value>
                <fullName>Vendor Website</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Internal Proposal</fullName>
            </value>
            <value>
                <fullName>No Evidence</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>