force-app/main/default/objects/OperationPaymentRequest__c/fields/Credit_AC_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_AC_Number__c</fullName>
    <label>Credit A/C Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>