force-app/main/default/objects/OperationPaymentRequest__c/fields/Credit_BankBranch_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_BankBranch_Name__c</fullName>
    <label>Credit Bank/Branch Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>