force-app/main/default/objects/OperationPaymentRequest__c/fields/Exchange_rate_for_Com__c.field-meta.xml
<CustomField>
    <fullName>Exchange_rate_for_Com__c</fullName>
    <label>Exchange rate for Com</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>