force-app/main/default/objects/OperationPaymentRequest__c/fields/Expected_Return_AmountLocal__c.field-meta.xml
<CustomField>
    <fullName>Expected_Return_AmountLocal__c</fullName>
    <label>Expected Return Amount(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>