force-app/main/default/objects/OperationPaymentRequest__c/fields/FTMSSOID__c.field-meta.xml
<CustomField>
    <fullName>FTMSSOID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F/TMS S/O ID</label>
    <referenceTo>FTMSSO__c</referenceTo>
    <relationshipName>Payment_Request</relationshipName>
    <type>Lookup</type>
</CustomField>