force-app/main/default/objects/OperationPaymentRequest__c/fields/H_BL_Number__c.field-meta.xml
<CustomField>
    <fullName>H_BL_Number__c</fullName>
    <label>H B/L Number</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>