force-app/main/default/objects/OperationPaymentRequest__c/fields/HBLNumber__c.field-meta.xml
<CustomField>
    <fullName>HBLNumber__c</fullName>
    <formula>FTMSSOID__r.HBLNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>H B/L Number</label>
    <type>Text</type>
</CustomField>