force-app/main/default/objects/OperationPaymentRequest__c/fields/How_to_Connect_Source_to_Trx_Plan__c.field-meta.xml
<CustomField>
    <fullName>How_to_Connect_Source_to_Trx_Plan__c</fullName>
    <label>How to Connect Source to Trx Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>