force-app/main/default/objects/OperationPaymentRequest__c/fields/Job_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_Request_ID__c</fullName>
    <formula>FTMSSOID__r.JobRequestID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Request ID</label>
    <type>Text</type>
</CustomField>