force-app/main/default/objects/OperationPaymentRequest__c/fields/Liquidation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Liquidation_Notes__c</fullName>
    <label>Liquidation Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>