force-app/main/default/objects/OperationPaymentRequest__c/fields/Lock_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Lock_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Attachment</label>
    <type>Checkbox</type>
</CustomField>