force-app/main/default/objects/OperationPaymentRequest__c/fields/M_BL_Number__c.field-meta.xml
<CustomField>
    <fullName>M_BL_Number__c</fullName>
    <label>M B/L Number</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>