force-app/main/default/objects/OperationPaymentRequest__c/fields/Money_TRF__c.field-meta.xml
<CustomField>
    <fullName>Money_TRF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Money TRF?</label>
    <type>Checkbox</type>
</CustomField>