force-app/main/default/objects/OperationPaymentRequest__c/fields/No_of_Days_after_created__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_after_created__c</fullName>
    <formula>DATEVALUE(NOW())-Planned_Process_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days after created</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>