force-app/main/default/objects/OperationPaymentRequest__c/fields/Notes_in_Document__c.field-meta.xml
<CustomField>
    <fullName>Notes_in_Document__c</fullName>
    <label>Notes in Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>