force-app/main/default/objects/OperationPaymentRequest__c/fields/Offset_Process_Payable_Trx_Out__c.field-meta.xml
<CustomField>
    <fullName>Offset_Process_Payable_Trx_Out__c</fullName>
    <label>Offset Process Payable-Trx Out</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>