force-app/main/default/objects/OperationPaymentRequest__c/fields/Offset_Process_Receivable_Trx_In__c.field-meta.xml
<CustomField>
    <fullName>Offset_Process_Receivable_Trx_In__c</fullName>
    <label>Offset Process Receivable-Trx In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>