force-app/main/default/objects/OperationPaymentRequest__c/fields/Payable_Completed__c.field-meta.xml
<CustomField>
    <fullName>Payable_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payable Completed</label>
    <type>Checkbox</type>
</CustomField>