force-app/main/default/objects/OperationPaymentRequest__c/fields/Payment_Confirmed_Trx_Out__c.field-meta.xml
<CustomField>
    <fullName>Payment_Confirmed_Trx_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Confirmed-Trx Out</label>
    <type>Checkbox</type>
</CustomField>