force-app/main/default/objects/OperationPaymentRequest__c/fields/Payment_description__c.field-meta.xml
<CustomField>
    <fullName>Payment_description__c</fullName>
    <label>Payment description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>