force-app/main/default/objects/OperationPaymentRequest__c/fields/Payment_due_date__c.field-meta.xml
<CustomField>
    <fullName>Payment_due_date__c</fullName>
    <label>Payment due date</label>
    <type>Date</type>
</CustomField>