force-app/main/default/objects/OperationPaymentRequest__c/fields/Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Notes__c</fullName>
    <label>Payment Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>