force-app/main/default/objects/OperationPaymentRequest__c/fields/Payment_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Payment_Source_Category__c</fullName>
    <label>PAYMENT SOURCE CATEGORY</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PII</fullName>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>PCI</fullName>
            </value>
            <value>
                <fullName>COPPA</fullName>
            </value>
            <value>
                <fullName>CCPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>