force-app/main/default/objects/OperationPaymentRequest__c/fields/Payment_to__c.field-meta.xml
<CustomField>
    <fullName>Payment_to__c</fullName>
    <label>Payment to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>