force-app/main/default/objects/OperationPaymentRequest__c/fields/Paymentto__c.field-meta.xml
<CustomField>
    <fullName>Paymentto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment to</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Payment_Request</relationshipName>
    <type>Lookup</type>
</CustomField>