force-app/main/default/objects/OperationPaymentRequest__c/fields/Plan_Amount_for_Collection_TextLocal__c.field-meta.xml
<CustomField>
    <fullName>Plan_Amount_for_Collection_TextLocal__c</fullName>
    <label>Plan Amount for Collection-Text(Local)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>