force-app/main/default/objects/OperationPaymentRequest__c/fields/Plan_Amount_for_CollectionFCY__c.field-meta.xml
<CustomField>
    <fullName>Plan_Amount_for_CollectionFCY__c</fullName>
    <label>Plan Amount for Collection(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>