force-app/main/default/objects/OperationPaymentRequest__c/fields/Plan_Amount_for_Payment_TextFCY__c.field-meta.xml
<CustomField>
    <fullName>Plan_Amount_for_Payment_TextFCY__c</fullName>
    <label>Plan Amount for Payment-Text(FCY)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>