force-app/main/default/objects/OperationPaymentRequest__c/fields/Plan_Amount_for_PaymentLocal__c.field-meta.xml
<CustomField>
    <fullName>Plan_Amount_for_PaymentLocal__c</fullName>
    <label>Plan Amount for Payment(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>