force-app/main/default/objects/OperationPaymentRequest__c/fields/Plan_Amount_for_PaymentLocal_Text__c.field-meta.xml
<CustomField>
    <fullName>Plan_Amount_for_PaymentLocal_Text__c</fullName>
    <label>Plan Amount for Payment(Local)-Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>