force-app/main/default/objects/OperationPaymentRequest__c/fields/Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status__c</fullName>
    <label>Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Payment Arranged</fullName>
            </value>
            <value>
                <fullName>Payment Processed On Time</fullName>
            </value>
            <value>
                <fullName>Payment Processed Late</fullName>
            </value>
            <value>
                <fullName>Payment Delayed</fullName>
            </value>
            <value>
                <fullName>Payment Rejected</fullName>
            </value>
            <value>
                <fullName>Fully Returned On Time</fullName>
            </value>
            <value>
                <fullName>Partially Returned</fullName>
            </value>
            <value>
                <fullName>Return Delay</fullName>
            </value>
            <value>
                <fullName>Liquidation Request Processed</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Accountant Received</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Payment Processing</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>