force-app/main/default/objects/OperationPaymentRequest__c/fields/Planned_Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Process_Date__c</fullName>
    <label>Planned Process Date</label>
    <type>Date</type>
</CustomField>