force-app/main/default/objects/OperationPaymentRequest__c/fields/Process_Payable_Liquidation__c.field-meta.xml
<CustomField>
    <fullName>Process_Payable_Liquidation__c</fullName>
    <label>Process Payable-Liquidation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>