force-app/main/default/objects/OperationPaymentRequest__c/fields/Receipt_Confirmed_Trx_In__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Confirmed_Trx_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Confirmed-Trx In</label>
    <type>Checkbox</type>
</CustomField>