force-app/main/default/objects/OperationPaymentRequest__c/fields/Requester_Address__c.field-meta.xml
<CustomField>
    <fullName>Requester_Address__c</fullName>
    <label>Requester Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>