force-app/main/default/objects/OperationPaymentRequest__c/fields/Requester_Department__c.field-meta.xml
<CustomField>
    <fullName>Requester_Department__c</fullName>
    <label>Requester Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>