force-app/main/default/objects/OperationPaymentRequest__c/fields/Return_AmountFCY__c.field-meta.xml
<CustomField>
    <fullName>Return_AmountFCY__c</fullName>
    <label>Return Amount(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>