force-app/main/default/objects/OperationPaymentRequest__c/fields/Scheduled_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Return_Date__c</fullName>
    <label>Scheduled Return Date</label>
    <type>Date</type>
</CustomField>