force-app/main/default/objects/OperationPaymentRequest__c/fields/Start_Automatic_Processing__c.field-meta.xml
<CustomField>
    <fullName>Start_Automatic_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Automatic Processing</label>
    <type>Checkbox</type>
</CustomField>