force-app/main/default/objects/OperationPaymentRequest__c/fields/Submit_Status__c.field-meta.xml
<CustomField>
    <fullName>Submit_Status__c</fullName>
    <label>Submit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>