force-app/main/default/objects/OperationPaymentRequest__c/fields/TotalAmountofBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingFCY__c</fullName>
    <label>Total Amount of Buying (FCY)</label>
    <summarizedField>FTMSBillPaymentRequest__c.TotalAmountofBuyingFCY__c</summarizedField>
    <summaryForeignKey>FTMSBillPaymentRequest__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>