force-app/main/default/objects/OperationPaymentRequest__c/fields/TotalAmountofBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingLocal__c</fullName>
    <label>Total Amount of Buying (Local)</label>
    <summarizedField>FTMSBillPaymentRequest__c.TotalAmountofBuyingLocal__c</summarizedField>
    <summaryForeignKey>FTMSBillPaymentRequest__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>