force-app/main/default/objects/OperationPaymentRequest__c/fields/TotalBuyingInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxFCY__c</fullName>
    <label>Total Buying Incl Tax (FCY)</label>
    <summarizedField>FTMSBillPaymentRequest__c.TotalBuyingInclTaxFCY__c</summarizedField>
    <summaryForeignKey>FTMSBillPaymentRequest__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>