force-app/main/default/objects/OperationPaymentRequest__c/fields/TotalBuyingInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxLocal__c</fullName>
    <label>Total Buying Incl Tax (Local)</label>
    <summarizedField>FTMSBillPaymentRequest__c.TotalBuyingInclTaxLocal__c</summarizedField>
    <summaryForeignKey>FTMSBillPaymentRequest__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>