force-app/main/default/objects/OperationPaymentRequest__c/fields/TotalBuyingInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxUSD__c</fullName>
    <label>Total Buying Incl Tax (USD)</label>
    <summarizedField>MasterBillingPaymentRequest__c.TotalBuyingInclTaxUSD__c</summarizedField>
    <summaryForeignKey>MasterBillingPaymentRequest__c.PaymentRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>