force-app/main/default/objects/OperationPaymentRequest__c/fields/TotalBuyingInclTaxVND__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxVND__c</fullName>
    <label>Total Buying Incl Tax (VND)</label>
    <summarizedField>MasterBillingPaymentRequest__c.TotalBuyingInclTaxVND__c</summarizedField>
    <summaryForeignKey>MasterBillingPaymentRequest__c.PaymentRequest__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>